# quantforge

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  batch_supplement_4.tsv  deploy_to_server.py  pyproject.toml  run_backend.bat  start_backend.bat  start_frontend.bat  strats.json  test_more_reports.py  test_quotes.py  test_reports.py  启动.bat
.claude/: settings.local.json
.github/workflows/: android.yml
.trae/documents/: humanoid_robot_research_dashboard_plan.md  industry_research_dashboard_plan.md
config/: default.yaml
data/: accounts.json  cache.db  paper_state.json  users.json
deploy/: README.md  deploy.sh  deploy_centos.sh  deploy_centos_simple.sh  fix_login.sh  nginx.conf  quantforge.service
docs/: 大模型配置.md
fenchuan_blog/: README.md  index.html  login.py  server.py
plugins/: logger_plugin.py
scripts/: check_server.py  generate_excel.py  generate_titles.py  refresh_ai_picks.ps1  research_institution_winrate.py  run_keyword_once.py  run_mlcc.py  run_wuli_ai.py  sync_reports.py  wechat_mp_probe.py
src/quantforge/: __init__.py  cli.py
strategies/examples/: adaptive_momentum.py  ai_pick_strategies.py  bollinger_breakout.py  chandelier_exit.py  dual_ma_strategy.py  ensemble_voting.py  grid_trading.py  keltner_channel.py  macd_strategy.py  ml_alpha_strategy.py  rsi_mean_revert.py  turtle_breakout.py  volume_price_breakout.py
strategies/yaml/: adx_trend.yaml  after_hours_big_deal.yaml  ai_semiconductor.yaml  analyst_upgrade.yaml  (+108 more)
tests/: conftest.py
web/: .env.app  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
(+206 files in other folders)
